--- a/app/src/main/res/layout/activity_scorll_picker.xml
+++ b/app/src/main/res/layout/activity_scorll_picker.xml
@@ -6,12 +6,12 @@
                 android:layout_height="match_parent"
                 tools:context=".ui.ScrollPickerActivity">
 
-    <com.john.ankotlin.ui.view.HorizontalselectedView
+    <com.john.kot.view.HorizontalselectedView
             android:id="@+id/horizon"
             android:layout_width="800dp" android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             app:HorizontalselectedViewSeesize="7"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
             app:HorizontalselectedViewSelectedTextColor="#E47A7A"
             app:HorizontalselectedViewSelectedTextSize="60"
             app:HorizontalselectedViewTextColor="#DDDDDD"
