--- a/app/src/main/res/layout/activity_circle_progress.xml
+++ b/app/src/main/res/layout/activity_circle_progress.xml
@@ -7,6 +7,6 @@
         android:layout_height="match_parent"
         tools:context=".ui.CircleProgressActivity">
 
-    <com.john.ankotlin.art.CirArcView
+    <com.john.kot.view.CirArcView
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </RelativeLayout>
