--- a/app/src/main/res/layout/activity_anim_property.xml
+++ b/app/src/main/res/layout/activity_anim_property.xml
@@ -4,31 +4,30 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".anim.ViewAnimActivity">
-
-
-    <TextView
-            android:id="@+id/textView5"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:background="@android:color/holo_blue_bright"
-            android:text="TextView" />
-
+        tools:context="com.john.kot.anim.PropertyAnimActivity">
 
     <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button"
-            app:layout_constraintRight_toRightOf="parent" />
+            tools:layout_editor_absoluteX="47dp"
+            tools:layout_editor_absoluteY="43dp" />
 
-    <Button
-            android:id="@+id/button1"
+
+    <TextView
+            android:id="@+id/tv_move_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimen_15"
-            android:layout_toRightOf="@+id/button"
-            android:text="overridePending"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:layout_below="@+id/button"
+            android:text="moveMe" />
 
+
+    <Button
+            android:id="@+id/bt_anim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_move_me"
+            android:layout_marginTop="@dimen/dimen_30"
+            android:text="动画" />
 </com.john.kot.view.widget.XYRelativeLayout>
