--- a/app/src/main/res/layout/activity_circle_progress.xml
+++ b/app/src/main/res/layout/activity_circle_progress.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.CircleProgressActivity">
 
-    <com.john.kot.view.CirArcView
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <!--    <com.john.kot.view.CirArcView
+                android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
+
+
+    <com.john.kot.view.OnTouchEventView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+<!--
+    <com.john.kot.view.TermRoundView
+            android:id="@+id/trm_rule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+    <com.john.kot.view.TempCircleView
+            android:layout_below="@+id/trm_rule"
+            android:layout_width="51dp"
+            android:layout_height="51dp" />
+-->
+
+
 </RelativeLayout>
