--- a/app/src/main/res/layout/ble_activity_temp.xml
+++ b/app/src/main/res/layout/ble_activity_temp.xml
@@ -53,21 +53,22 @@
                  android:textColor="#ffa2cb79"
                  android:textSize="37sp" />-->
 
-   <!-- <com.john.kot.view.TermRoundView
+    <com.comm.util.view.TermRoundView
             android:id="@+id/trm_rule"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="850dp"
+            android:layout_height="250dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="40dp" />-->
+            android:layout_marginLeft="40dp"
+            app:isRulerInput="false" />
 
-   <!-- <com.john.kot.view.DialKgView
-            android:id="@+id/dlkgview"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />-->
+    <!-- <com.john.kot.view.DialKgView
+             android:id="@+id/dlkgview"
+             android:layout_width="400dp"
+             android:layout_height="400dp"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintRight_toRightOf="parent"
+             app:layout_constraintTop_toTopOf="parent" />-->
 
 
     <!--
@@ -89,13 +90,19 @@
 
         </RelativeLayout>-->
 
-<!--    <com.john.kot.view.SaveRestoreView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>-->
+    <!--    <com.john.kot.view.SaveRestoreView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>-->
 
-    <com.john.kot.view.LayerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <!--  <com.john.kot.view.LayerView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"/>-->
 
+
+    <Button
+            android:id="@+id/bt_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="添加" />
 </RelativeLayout>
 
