--- a/app/src/main/res/layout/ble_activity_temp.xml
+++ b/app/src/main/res/layout/ble_activity_temp.xml
@@ -59,7 +59,7 @@
             android:layout_height="250dp"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="40dp"
-            app:isRulerInput="false" />
+            app:isRulerInput="true" />
 
     <!-- <com.john.kot.view.DialKgView
              android:id="@+id/dlkgview"
