--- a/androidUtil/src/main/res/values/styles.xml
+++ b/androidUtil/src/main/res/values/styles.xml
@@ -97,5 +97,9 @@
     </style>
 
 
+    <declare-styleable name="CirArcView">
+        <attr name="circleCRadius" format="float" />
+        <attr name="arcWidth" format="float" />
+    </declare-styleable>
 
 </resources>
