--- a/app/src/main/res/layout/activity_circle_progress.xml
+++ b/app/src/main/res/layout/activity_circle_progress.xml
@@ -6,14 +6,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.CircleProgressActivity">
 
-    <!--    <com.john.kot.view.CirArcView
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
+        <com.android.util.view.CirArcView
+                android:id="@+id/cav"
+                android:layout_width="110dp" android:layout_height="110dp"/>
 
 
-    <com.john.kot.view.OnTouchEventView
+   <!-- <com.john.kot.view.OnTouchEventView
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
+-->
 <!--
     <com.john.kot.view.TermRoundView
             android:id="@+id/trm_rule"
