--- a/app/src/main/res/anim/view_anim_scale_change_bigger.xml
+++ b/app/src/main/res/anim/view_anim_scale_change_bigger.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="3000"
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="2000"
         android:startOffset ="1000"
         android:fillBefore = "true"
         android:fillAfter = "true"
         android:fillEnabled="true"
         android:repeatMode="restart"
-        android:repeatCount ="0"
+        android:repeatCount ="0">
 
-        android:fromXScale="0.5"
+    <scale
+        android:fromXScale="1"
         android:toXScale="2"
-        android:fromYScale="0.5"
+        android:fromYScale="1"
         android:toYScale ="2"
         android:pivotY="50%"
-        android:pivotX="50%">
+        android:pivotX="50%"/>
+
+    <alpha android:fromAlpha="0.3"
+            android:toAlpha="1.0"/>
+
 
 
   <!--  // 以下参数是4种动画效果的公共属性,即都有的属性
@@ -50,4 +55,4 @@
     ————————————————
     版权声明：本文为CSDN博主「Carson_Ho」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
     原文链接：https://blog.csdn.net/carson_ho/article/details/72827747-->
-</scale>
+</set>
