--- a/app/src/main/res/layout/activity_photo_basics.xml
+++ b/app/src/main/res/layout/activity_photo_basics.xml
@@ -11,19 +11,38 @@
             android:id="@+id/bt_basic_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="基本显示"/>
+            android:text="直接显示" />
 
-  <Button
-            android:id="@+id/bt_add_gallery"
+    <LinearLayout
             android:layout_width="wrap_content"
-          android:layout_marginTop="20dp"
             android:layout_height="wrap_content"
-            android:text="图片加到相册"/>
+            android:orientation="horizontal">
+
+        <Button
+                android:id="@+id/bt_basic_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="获取原图路径" />
+
+        <Button
+                android:id="@+id/bt_compass_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="获取压缩路径" />
+
+    </LinearLayout>
+
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="图片加到相册" />
 
     <ImageView
             android:id="@+id/img_show"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-.
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
+    .
 </LinearLayout>
