--- a/app/src/main/res/layout/test_content_main.xml
+++ b/app/src/main/res/layout/test_content_main.xml
@@ -6,52 +6,14 @@
         android:background="@android:color/white"
         android:padding="16dp">
 
-    <TextView
-            android:id="@+id/title"
+    <com.android.util.view.BodyDataView
+            android:id="@+id/rl_skeletalmuscle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_15"
-            android:text="Registration"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-            android:id="@+id/firstName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Fist Name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <EditText
-            android:id="@+id/lastName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Last Name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/firstName" />
-
-
-    <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Submit"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastName" />
-
-
-    <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Message here"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:body_value_text_size="16sp"
+            app:body_value_title="骨骼肌"
+            app:body_value_txt="---" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
