--- a/app/src/main/res/layout/activity_databinding_drawable.xml
+++ b/app/src/main/res/layout/activity_databinding_drawable.xml
@@ -3,20 +3,22 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             tools:context=".ui.dbdraw.DatabindingDrawableActivity">
 
         <TextView
+                drawable_radius="@{10}"
+                drawable_solidColor="@{0x7fffffff}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/dimen_15"
-                android:paddingRight="@dimen/dimen_15"
                 android:text="忽略"
-                drawable_solidColor="@{0x7fffffff}"
-                drawable_radius="@{80}"
                 android:textSize="26sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </LinearLayout>
 </layout>
