--- a/app/src/main/res/layout/activity_databinding_drawable.xml
+++ b/app/src/main/res/layout/activity_databinding_drawable.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<layout>
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".ui.dbdraw.DatabindingDrawableActivity">
 
         <TextView
+                android:id="@+id/tv_count"
                 drawable_radius="@{10}"
                 drawable_solidColor="@{0x7fffffff}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:text="忽略"
                 android:textSize="26sp" />
 
 
-
-
+        <Button
+                android:id="@+id/bt_resend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
