--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -19,5 +19,7 @@
             android:layout_height="wrap_content"
             android:text="LogUtil打印日志" />
 
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 </LinearLayout>
