--- a/app/src/main/res/layout/activity_okhtttp.xml
+++ b/app/src/main/res/layout/activity_okhtttp.xml
@@ -4,13 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".customview.DrawPathActivity">
+        tools:context=".net.OkhtttpActivity">
 
-    <!-- <com.john.kot.view.PathDraw
-             android:layout_width="match_parent"
-             android:layout_height="match_parent" />-->
-
-    <com.john.kot.view.SaveRestoreView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
