--- a/app/src/main/res/layout/activity_strap_sleep.xml
+++ b/app/src/main/res/layout/activity_strap_sleep.xml
@@ -15,7 +15,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".custom.StrapSleepActivity">
+            tools:context=".customview.StrapSleepActivity">
 
         <ImageView
                 android:id="@+id/iv_back"
