--- a/app/src/main/res/layout/activity_write_rxjava.xml
+++ b/app/src/main/res/layout/activity_write_rxjava.xml
@@ -4,13 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".tool.rx.RxJavaActivity">
+        tools:context=".tool.rx.WriteRxjavaActivity">
+
 
     <Button
-            android:id="@+id/bt_rx"
+            android:onClick="bt_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="RX输出" />
-
 </LinearLayout>
