--- a/app/src/main/res/layout/activity_life_cycle.xml
+++ b/app/src/main/res/layout/activity_life_cycle.xml
@@ -4,11 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mvvm.viewmodel.ViewModelActivity">
+        tools:context=".mvvm.lifecycle.LifeCycleActivity">
 
-    <Button
-            android:id="@+id/bt_do_action"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DoAction"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
