--- a/app/src/main/res/layout/activity_scorll_picker.xml
+++ b/app/src/main/res/layout/activity_scorll_picker.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.ScrollPickerActivity">
 
-    <com.john.kot.view.HorizontalselectedView
+   <!-- <com.john.kot.view.HorizontalselectedView
             android:id="@+id/horizon"
             android:layout_width="800dp"
             android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
             app:HorizontalselectedViewSelectedTextColor="#E47A7A"
             app:HorizontalselectedViewSelectedTextSize="60"
             app:HorizontalunselectedViewTextColor="#DDDDDD"
-            app:HorizontalunselectedViewTextSize="40" />
+            app:HorizontalunselectedViewTextSize="40" />-->
 
 
     <RelativeLayout
