--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
+
 
     <!--
         <com.john.ankotlin.elec.ZXBackGround android:layout_width="match_parent" android:layout_height="200dp"/>
@@ -25,4 +27,4 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
